[gd_scene load_steps=11 format=3 uid="uid://v8olp6xso2fi"]

[ext_resource type="Script" path="res://scenes/ui/character_selector.gd" id="1_yptdr"]
[ext_resource type="Texture2D" uid="uid://dpfqok8tuy4r7" path="res://art/tile_0084.png" id="2_gja1q"]
[ext_resource type="Resource" uid="uid://5amfdq7d808g" path="res://scenes/run/run_startup.tres" id="2_ncup5"]
[ext_resource type="Texture2D" uid="uid://cqcal03735mv8" path="res://art/tile_0118.png" id="3_bgq3f"]
[ext_resource type="Texture2D" uid="uid://pgj8vfpj6tc5" path="res://art/tile_0130.png" id="4_hrvvj"]

[sub_resource type="Gradient" id="Gradient_krdgw"]
colors = PackedColorArray(0.17767, 0.460928, 0.45331, 1, 0.068483, 0.0184055, 0.195457, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bnll8"]
gradient = SubResource("Gradient_krdgw")
width = 16

[sub_resource type="LabelSettings" id="LabelSettings_0f34i"]
line_spacing = 5.0
shadow_size = 4
shadow_color = Color(0.392157, 0, 0, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_ucuns"]
line_spacing = 5.0
font_size = 11
shadow_size = 4
shadow_color = Color(0.392157, 0, 0, 0.392157)

[sub_resource type="ButtonGroup" id="ButtonGroup_tvv8i"]

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yptdr")
run_startup = ExtResource("2_ncup5")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_bnll8")

[node name="CharText" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.5
offset_top = 5.0
offset_right = 94.5
offset_bottom = 65.0
grow_horizontal = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="CharText"]
unique_name_in_owner = true
layout_mode = 2
text = "Character"
label_settings = SubResource("LabelSettings_0f34i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="CharText"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
text = "Does stuff
Possible second line"
label_settings = SubResource("LabelSettings_ucuns")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CharPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 20.0
offset_top = 74.0
offset_right = 80.0
offset_bottom = 134.0
texture = ExtResource("2_gja1q")
expand_mode = 1
stretch_mode = 5

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -25.0
offset_right = -15.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Start"

[node name="CharButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.5
offset_top = -65.0
offset_right = 32.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 5

[node name="WarriorButton" type="Button" parent="CharButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_tvv8i")

[node name="Icon" type="TextureRect" parent="CharButtons/WarriorButton"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bgq3f")
expand_mode = 1
stretch_mode = 5

[node name="WizardButton" type="Button" parent="CharButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tvv8i")

[node name="Icon" type="TextureRect" parent="CharButtons/WizardButton"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_hrvvj")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CharButtons/WarriorButton" to="." method="_on_warrior_button_pressed"]
[connection signal="pressed" from="CharButtons/WizardButton" to="." method="_on_wizard_button_pressed"]
